2020-12-16  Dmitry V. Levin  <ldv@altlinux.org>

	* eu-config.h (_): New macro.
	* xmalloc.c (_): Remove.

2020-11-01  Érico N. Rolim  <erico.erc@gmail.com>

	* system.h (ACCESSPERMS): Define macro if it doesn't exist.
	(ALLPERMS): Likewise.
	(DEFFILEMODE): Likewise.

2020-06-11  Mark Wielaaard  <mark@klomp.org>

	* printversion.c (print_version): Update copyright year.

2019-08-25  Srđan Milaković  <sm108@rice.edu>

	* dynamicsizehash_concurrent.{c,h}: New files.
	* Makefile.am (noinst_HEADERS): Added dynamicsizehash_concurrent.h.

2019-08-25  Jonathon Anderson  <jma14@rice.edu>

	* stdatomic-fbsd.h: New file, taken from FreeBSD.
	* atomics.h: New file.
	* Makefile.am (noinst_HEADERS): Added *.h above.

2019-05-03  Rosen Penev  <rosenp@gmail.com>

	* color.c (parse_opt): Cast program_invocation_short_name to char *.

2018-11-04  Mark Wielaard  <mark@klomp.org>

	* bpf.h: Add BPF_JLT, BPF_JLE, BPF_JSLT and BPF_JSLE.

2018-07-04  Ross Burton <ross.burton@intel.com>

	* color.c: Remove error.h, add system.h include.
	* system.h: Add error.h include.
	* xmalloc.c: Remove error.h include.

2018-06-01  Mark Wielaard  <mark@klomp.org>

	* printversion.c (print_version): Update copyright year.

2018-02-09  Joshua Watt  <JPEWhacker@gmail.com>

	* eu-config.h (FALLTHROUGH): New macro.

2017-10-16  Mark Wielaard  <mark@klomp.org>

	* md5.{c,h}: Removed.
	* sha1.{c,h}: Likewise.
	* Makefile.am (libeu_a_SOURCES): Remove md5.c and sha1.c.
	(noinst_HEADERS): Remove md5.h and sha1.h.

2017-08-18  Ulf Hermann  <ulf.hermann@qt.io>

	* eu-config.h: Define attribute_packed to either
	__attribute__((packed)) or __attribute__((packed, gcc_struct)).

2017-04-27  Ulf Hermann  <ulf.hermann@qt.io>

	* eu-config.h: Define attribute_hidden to be empty if the compiler
	doesn't support it.

2017-04-27  Ulf Hermann  <ulf.hermann@qt.io>

	* Makefile.am: Use fpic_CFLAGS.

2017-07-18  Mark Wielaard  <mark@klomp.org>

	* bpf.h: New file.
	* Makefile.am (noinst_HEADERS): Add bpf.h
